# reedsolomon

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  BUILD.txt  MANIFEST.in  Makefile  README.md  README.rst  TODO.txt  build.sh  changelog.txt  creedsolo-arrays-speedtests.ipynb  creedsolo.c  creedsolo.pyx  pyproject.toml  pyproject.toml_draft  reedsolo.py  requirements.txt  setup.py  tox.ini
.github/workflows/: build_wheelhouse.yml  build_wheels.yml  ci-build-downstream.yml  ci-build.yml  codeql.yml  python-package-runtests.yml  python-package.yml
src/creedsolo/: __init__.py  creedsolo.c  creedsolo.pyx
src/preedsolo/: __init__.py  preedsolo.py
src/reedsolo/: __init__.py  reedsolo.py
tests/: perf.py  test_creedsolo.py  test_preedsolo.py  test_reedsolo.py
